--- a/Módulo 03/Exercícios/ex022/fundo006.html
+++ b/Módulo 03/Exercícios/ex022/fundo006.html
@@ -8,10 +8,7 @@
     <style>
         body {
             height: 100vh;
-            background-color: black;
-            background-image: url(imagens/wallpaper002.jpg);
-            background-position: center center;
-            background-repeat: no-repeat;
+            background: black url(imagens/wallpaper002.jpg) center center no-repeat fixed;
             background-size: cover;
         }
 
@@ -30,7 +27,20 @@
         <h1>Teste de imagem de fundo</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam commodi eveniet odio officia ut, dolores perferendis aliquam! Reiciendis animi molestiae corrupti quis corporis asperiores vero quod unde voluptatum? Illo, voluptatibus.
         Aliquid, perspiciatis beatae veritatis modi architecto vel et nemo ullam nesciunt fugit repellat sint ex accusantium officiis corrupti minima unde odio. Necessitatibus, ratione dolorum dolor corrupti dicta odit voluptatibus tempora?
-        Officiis consequatur corrupti nam, magni sunt cumque vitae hic exercitationem, tenetur dolores dignissimos aut quos minus. Necessitatibus ipsam sit libero veniam harum dicta unde earum ducimus amet ullam, cupiditate voluptas.</p>
+        Officiis consequatur corrupti nam, magni sunt cumque vitae hic exercitationem, tenetur dolores dignissimos aut quos minus. Necessitatibus ipsam sit libero veniam harum dicta unde earum ducimus amet ullam, cupiditate voluptas. Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat, molestias? Dignissimos eos est doloremque tempore. Quibusdam tenetur aliquam quod. Sed repudiandae sint quidem possimus porro fugiat doloribus exercitationem voluptates. Laboriosam.
+        Distinctio ut eos, hic sapiente iste iusto obcaecati consectetur doloremque delectus porro odio, pariatur perspiciatis nesciunt cum tempora repudiandae dolore. Optio adipisci nisi quas unde accusamus, sed nulla in doloribus?
+        Molestiae repudiandae asperiores animi? Facere voluptate ea, repellat, officia assumenda eveniet ducimus eum quo dolorem, architecto temporibus. Sint nesciunt, ad alias eaque laboriosam perspiciatis. Veniam eaque ex porro delectus dolores.
+        Earum atque veritatis nobis placeat? Optio, iusto! Repellendus aperiam aliquam in nesciunt quis, expedita libero veritatis quasi nihil cum fugiat assumenda quam aliquid nisi obcaecati earum tempore inventore unde laudantium?
+        Commodi laboriosam eum porro ex velit aperiam ut non corporis veritatis ea ipsam magnam molestias officiis eveniet, assumenda itaque consectetur recusandae mollitia placeat aliquam ullam tempore alias reprehenderit? Hic, ipsam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut aspernatur iure perspiciatis consectetur modi soluta ad, autem laudantium officia optio commodi? Eos autem deserunt numquam illum commodi eligendi omnis molestias.
+        Reiciendis voluptates consequuntur nihil doloribus hic a iste, totam quas quae? Necessitatibus ex dolore libero dolor vero, maxime, esse consectetur mollitia voluptate ut iste reiciendis earum non asperiores, itaque accusantium?
+        Exercitationem ipsam sed odio, soluta incidunt cupiditate ad laborum excepturi natus esse nostrum impedit minima, sint dolor ut quasi magni iusto doloremque. Veritatis libero itaque enim natus architecto ullam pariatur!
+        Eius consequatur laudantium unde minima commodi quasi, consectetur exercitationem, delectus aspernatur culpa soluta necessitatibus veniam nobis ex aperiam suscipit modi quisquam ipsum corporis fugit? Commodi et odio dolorum tempore vitae.
+        Magni ut iusto velit esse veniam eos. Ratione obcaecati nesciunt fugiat aperiam optio veniam blanditiis, eos sequi a quod minus facere nulla soluta, tempore architecto labore, ut dolorem quisquam ipsum.
+        Nemo, voluptatem alias ipsam similique, voluptatibus dignissimos ad neque optio omnis asperiores laboriosam ullam eligendi natus architecto distinctio fuga culpa consequuntur! Ex, libero corrupti. Ratione debitis assumenda ipsum optio nostrum?
+        Libero architecto quisquam earum voluptas dolorum fugit vero iusto consequuntur maiores, exercitationem enim temporibus molestiae facere quis, velit perferendis possimus provident repellat esse pariatur deleniti voluptatibus? Fugiat iste minus debitis!
+        Corrupti, fugit minima reprehenderit obcaecati praesentium illo, repellat recusandae aliquid delectus nesciunt pariatur, commodi libero eos laboriosam quibusdam hic provident architecto odit distinctio. Quae eos quasi facere nisi modi adipisci?
+        Nam accusantium aliquid repellat, atque suscipit minima, molestiae recusandae deleniti itaque fuga quia asperiores ipsam inventore officia reiciendis ad rem mollitia voluptatibus debitis voluptatem sapiente veritatis facere! Molestias, accusamus iure?
+        Tenetur consequuntur dolores id quo a reiciendis, delectus magni voluptatem omnis pariatur mollitia nostrum! Accusamus quasi obcaecati, natus excepturi, nemo harum doloribus repellendus, illo quo ut impedit. Excepturi, placeat ex.</p>
     </main>
 </body>
 </html>
