--- a/Módulo 03/Exercícios/ex023/tabela002.html
+++ b/Módulo 03/Exercícios/ex023/tabela002.html
@@ -17,6 +17,12 @@
             border: 1px solid black;
             padding: 10px;
         }
+        caption {
+            font-size: 1.5em;
+            font-weight: bold;
+            padding: 10px;
+            background-color: lightgray;
+        }
         thead, tfoot {
             background-color: lightgray;
             color: black;
@@ -29,9 +35,12 @@
 <body>
     <h1>Uso de tabelas grandes</h1>
     <table>
+        <caption>
+            População das Unidades Federativas
+        </caption>
         <thead>
-            <th>Estado</th>
-            <th>População</th>
+            <th scope="col">Estado</th>
+            <th scope="col" style="width: 50px">População</th>
         </thead>
         <tbody>
             <tr>
