--- a/Módulo 03/Exercícios/ex023/tabela002.html
+++ b/Módulo 03/Exercícios/ex023/tabela002.html
@@ -12,6 +12,7 @@
         table {
             width: 500px;
             border-collapse: collapse;
+            position: relative;
         }
         td, th {
             border: 1px solid black;
@@ -24,8 +25,13 @@
             background-color: lightgray;
         }
         thead, tfoot {
-            background-color: lightgray;
+            background-color: rgba(0, 0, 0, 0.637);
             color: black;
+        }
+        thead > tr > th {
+            position: sticky;
+            top: -1px;
+            background-color: lightgray;
         }
         tbody > tr:nth-child(odd) {
             background-color: lightgray;
@@ -166,5 +172,30 @@
             </tr>
         </tfoot>
     </table>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo nisi error expedita aliquid sed. Amet cupiditate inventore quos recusandae. Eius necessitatibus veritatis, at accusamus molestiae magnam eum iste debitis? Saepe!
+    Ad facere veniam distinctio dolorum molestias unde recusandae aspernatur consequuntur neque sed consectetur temporibus voluptatem maxime animi quidem obcaecati dignissimos doloribus rem, illo quaerat quisquam minima nesciunt. Molestiae, cumque praesentium?
+    Temporibus error quasi, quas, harum adipisci itaque atque aut totam impedit nesciunt exercitationem voluptas tempora quod blanditiis excepturi alias suscipit eius autem, odit ducimus animi cumque eum numquam. Nostrum, dignissimos.
+    Maiores repellendus nam architecto odit! Distinctio harum repellendus fugit sequi quis suscipit, sed iste cupiditate necessitatibus reiciendis rem omnis magni! Eligendi, nostrum facilis? Laboriosam, voluptate dignissimos nostrum minima possimus explicabo!
+    Deleniti dolorem eius fugiat cupiditate temporibus voluptatum quibusdam dicta necessitatibus unde, consectetur consequuntur ex accusamus nemo iure cumque beatae sed voluptatem aliquid odio dolore quam suscipit, consequatur labore? Nesciunt, maxime?</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo nisi error expedita aliquid sed. Amet cupiditate inventore quos recusandae. Eius necessitatibus veritatis, at accusamus molestiae magnam eum iste debitis? Saepe!
+    Ad facere veniam distinctio dolorum molestias unde recusandae aspernatur consequuntur neque sed consectetur temporibus voluptatem maxime animi quidem obcaecati dignissimos doloribus rem, illo quaerat quisquam minima nesciunt. Molestiae, cumque praesentium?
+    Temporibus error quasi, quas, harum adipisci itaque atque aut totam impedit nesciunt exercitationem voluptas tempora quod blanditiis excepturi alias suscipit eius autem, odit ducimus animi cumque eum numquam. Nostrum, dignissimos.
+    Maiores repellendus nam architecto odit! Distinctio harum repellendus fugit sequi quis suscipit, sed iste cupiditate necessitatibus reiciendis rem omnis magni! Eligendi, nostrum facilis? Laboriosam, voluptate dignissimos nostrum minima possimus explicabo!
+    Deleniti dolorem eius fugiat cupiditate temporibus voluptatum quibusdam dicta necessitatibus unde, consectetur consequuntur ex accusamus nemo iure cumque beatae sed voluptatem aliquid odio dolore quam suscipit, consequatur labore? Nesciunt, maxime?</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo nisi error expedita aliquid sed. Amet cupiditate inventore quos recusandae. Eius necessitatibus veritatis, at accusamus molestiae magnam eum iste debitis? Saepe
+    Ad facere veniam distinctio dolorum molestias unde recusandae aspernatur consequuntur neque sed consectetur temporibus voluptatem maxime animi quidem obcaecati dignissimos doloribus rem, illo quaerat quisquam minima nesciunt. Molestiae, cumque praesentium?
+    Temporibus error quasi, quas, harum adipisci itaque atque aut totam impedit nesciunt exercitationem voluptas tempora quod blanditiis excepturi alias suscipit eius autem, odit ducimus animi cumque eum numquam. Nostrum, dignissimos.
+    Maiores repellendus nam architecto odit! Distinctio harum repellendus fugit sequi quis suscipit, sed iste cupiditate necessitatibus reiciendis rem omnis magni! Eligendi, nostrum facilis? Laboriosam, voluptate dignissimos nostrum minima possimus explicabo!
+    Deleniti dolorem eius fugiat cupiditate temporibus voluptatum quibusdam dicta necessitatibus unde, consectetur consequuntur ex accusamus nemo iure cumque beatae sed voluptatem aliquid odio dolore quam suscipit, consequatur labore? Nesciunt, maxime?</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo nisi error expedita aliquid sed. Amet cupiditate inventore quos recusandae. Eius necessitatibus veritatis, at accusamus molestiae magnam eum iste debitis? Saepe
+    Ad facere veniam distinctio dolorum molestias unde recusandae aspernatur consequuntur neque sed consectetur temporibus voluptatem maxime animi quidem obcaecati dignissimos doloribus rem, illo quaerat quisquam minima nesciunt. Molestiae, cumque praesentium?
+    Temporibus error quasi, quas, harum adipisci itaque atque aut totam impedit nesciunt exercitationem voluptas tempora quod blanditiis excepturi alias suscipit eius autem, odit ducimus animi cumque eum numquam. Nostrum, dignissimos.
+    Maiores repellendus nam architecto odit! Distinctio harum repellendus fugit sequi quis suscipit, sed iste cupiditate necessitatibus reiciendis rem omnis magni! Eligendi, nostrum facilis? Laboriosam, voluptate dignissimos nostrum minima possimus explicabo!
+    Deleniti dolorem eius fugiat cupiditate temporibus voluptatum quibusdam dicta necessitatibus unde, consectetur consequuntur ex accusamus nemo iure cumque beatae sed voluptatem aliquid odio dolore quam suscipit, consequatur labore? Nesciunt, maxime?</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo nisi error expedita aliquid sed. Amet cupiditate inventore quos recusandae. Eius necessitatibus veritatis, at accusamus molestiae magnam eum iste debitis? Saepe
+    Ad facere veniam distinctio dolorum molestias unde recusandae aspernatur consequuntur neque sed consectetur temporibus voluptatem maxime animi quidem obcaecati dignissimos doloribus rem, illo quaerat quisquam minima nesciunt. Molestiae, cumque praesentium?  
+    Temporibus error quasi, quas, harum adipisci itaque atque aut totam impedit nesciunt exercitationem voluptas tempora quod blanditiis excepturi alias suscipit eius autem, odit ducimus animi cumque eum numquam. Nostrum, dignissimos.
+    Maiores repellendus nam architecto odit! Distinctio harum repellendus fugit sequi quis suscipit, sed iste cupiditate necessitatibus reiciendis rem omnis magni! Eligendi, nostrum facilis? Laboriosam, voluptate dignissimos nostrum minima possimus explicabo! 
+    Deleniti dolorem eius fugiat cupiditate temporibus voluptatum quibusdam dicta necessitatibus unde, consectetur consequuntur ex accusamus nemo iure cumque beatae sed voluptatem aliquid odio dolore quam suscipit, consequatur labore? Nesciunt, maxime?</p>                          
 </body>
 </html>
